# topognosis

./: .gitignore
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts
apps/web/src/components/: ChatPanel.tsx  GraphPanel.tsx  NodeDetailPanel.tsx  ProtectedRoute.tsx  Sidebar.tsx  Tooltip.tsx
apps/web/src/context/: AuthContext.tsx
apps/web/src/pages/: AppShell.tsx  DashboardPage.tsx  GraphPage.tsx  LoginPage.tsx  RegisterPage.tsx  SessionGraphPage.tsx
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  requirements.txt
backend/core/: asgi.py  settings.py  urls.py
backend/graphs/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/graphs/migrations/: 0001_initial.py  0002_initial.py
backend/llm/: anthropic_adapter.py  base.py  router.py
backend/nodes/: event_types.py  models.py  serializers.py  urls.py  views.py
backend/nodes/migrations/: 0001_initial.py  0002_node_summary.py  0003_node_inherited_context_length.py  0004_event_linkedlist_fields.py  0005_event_branched_from_event_id.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py
cli/: .gitignore  pyproject.toml
cli/topo/: auth.py  backend.py  capture.py  display.py  main.py  session.py  snapshot.py
cli/topo/drivers/: base.py  claude.py
infra/: cdk.context.json  package-lock.json  package.json
infra/lib/: app-stack.ts  data-stack.ts  frontend-stack.ts  network-stack.ts
(+1 files in other folders)
