[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topo"
version = "0.1.0"
description = "Topognosis CLI — graph layer on top of Claude"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.0.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "rich>=13.7",
    "keyring>=24.3",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
topo = "topo.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["topo*"]
